# harp.device.lickety-split

./: .gitignore  .gitmodules  README.md  device.yml
Assets/Notes/: design_notes.md  pio_notes.md
Generators/: Generators.csproj
Interface/: Aind.LickDetector.sln
Interface/Aind.LickDetector/: Aind.LickDetector.csproj  AsyncDevice.Generated.cs  Device.Generated.cs
Interface/Aind.LickDetector/Properties/: AssemblyInfo.cs
firmware/: CMakeLists.txt  README.md
firmware/docs/: register_map.csv
firmware/inc/: ad9833.h  as9833.h  config.h  continuous_adc.h  core1_lick_detection.h  lick_detector.h  lick_queue.h  pio_ads7029.h  pio_ads70x9.h
firmware/src/: ad9833.cpp  as9833.cpp  continuous_adc.cpp  core1_lick_detection.cpp  lick_detector.cpp  main.cpp  pio_ads7029.cpp  pio_ads7029.pio  pio_ads70x9.cpp  pio_ads70x9.pio
hardware/board/: Draft1.asc
hardware/board/cable_buffer_board/cable_buffer_board/: cable_buffer_board.kicad_pcb  cable_buffer_board.kicad_pro  cable_buffer_board.kicad_sch  cable_buffer_board.step
hardware/board/harp_lick_detector_capactive/: board_power.kicad_sch  function_generator.kicad_sch  harp_lick_detector_capactive.csv  harp_lick_detector_capactive.kicad_pcb  harp_lick_detector_capactive.kicad_pro  harp_lick_detector_capactive.kicad_sch  harp_lick_detector_capactive.xml  isolated_usb_rp2040.kicad_sch  lick_detection_afe.kicad_sch  rp2040.kicad_sch  sensing_front_end.kicad_sch  sine_wave_source.kicad_sch  sma_ttl_out.kicad_sch  ttl_output.kicad_sch
hardware/board/main_board/: board_power.kicad_sch  function_generator.kicad_sch  isolated_usb_rp2040.kicad_sch  lick_detection_afe.kicad_sch  main_board.kicad_pcb  main_board.kicad_pro  main_board.kicad_sch  sma_ttl_out.kicad_sch  ~main_board.kicad_pcb.lck
hardware/board/main_board/main_board/: board_power.kicad_sch  function_generator.kicad_sch  isolated_usb_rp2040.kicad_sch  lick_detection_afe.kicad_sch  main_board.csv  main_board.kicad_pcb  main_board.kicad_pro  main_board.kicad_sch  (+2 more)
hardware/board/notes/: design_notes.md
notes/: design_notes.md  pio_notes.md
software/bonsai/: device.yml
software/bonsai/Generators/: Generators.csproj
software/bonsai/Interface/: AllenNeuralDynamics.LicketySplit.sln  AllenNeuralDynamics.LicketySplitLickDetector.sln
software/pyharp/: lick_detection_debug.py  read_raw_state.py  read_thresholds.py  wait_for_events.py
(+133 files in other folders)
